[gd_scene load_steps=10 format=2]

[ext_resource path="res://rex/rex.gd" type="Script" id=1]
[ext_resource path="res://rex/gen_rex.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/roar.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/steps.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/land.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/light_land.wav" type="AudioStream" id=6]

[sub_resource type="AudioStreamRandomPitch" id=1]

audio_stream = ExtResource( 3 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=2]

audio_stream = ExtResource( 4 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=3]

audio_stream = ExtResource( 6 )
random_pitch = 1.12

[node name="rex" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="sprite" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( -1, -38 )

[node name="collision" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -8, 2, -6, 5, 17, 4, 18, -2, 9, -7, 18, -13, 14, -32, 14, -47, 36, -49, 44, -68, 11, -67, -9, -38, -19, -24, -32, -13, -12, -6, -7, -4 )

[node name="ground_ray_a" type="RayCast2D" parent="." index="2"]

position = Vector2( -10, 1 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 6 )
collision_mask = 1

[node name="ground_ray_b" type="RayCast2D" parent="." index="3"]

position = Vector2( 20, 1 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 6 )
collision_mask = 1

[node name="roar_player" type="AudioStreamPlayer2D" parent="." index="4"]

stream = SubResource( 1 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "RexRoar"
area_mask = 0

[node name="step_player" type="AudioStreamPlayer2D" parent="." index="5"]

stream = SubResource( 2 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "SoundFX"
area_mask = 0

[node name="land_player" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "SoundFX"
area_mask = 0

[node name="lightland_player" type="AudioStreamPlayer2D" parent="." index="7"]

stream = SubResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "SoundFX"
area_mask = 0


